# GigaCenter

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: build-binary.yml  cli-binary.yml
assets/: gigacenter-daemon.service
src/: bat.rs  cli.rs  common.rs  ec.rs  fan_speed.rs  macros.rs  main.rs  monitor.rs  registers.rs  temp.rs  traits.rs
src/daemon/: client.rs  codec.rs  server.rs
src/ui/: bat_threshold.slint  global.slint  mod.rs  settings.slint  shared.slint  ui.slint
