[package]
name = "gigabyte-linux"
version = "0.1.0"
edition = "2024"

[dependencies]
anstyle = "1.0.10"
anyhow = "1.0.94"
async-trait = "0.1.83"
bincode = "1.3.3"
clap = { version = "4.5.23", features = ["derive"] }
enum_dispatch = "0.3.13"
env_logger = "0.11.6"
futures = "0.3.31"
libc = "0.2.167"
log = "0.4.22"
rkyv = { version = "0.8.9", features = ["bytecheck"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["codec"] }

[lints.rust]
rust_2018_idioms = { level = "forbid", priority = -1 }
missing_docs = "deny"
unused_results = "deny"

[lints.clippy]
type-complexity = "allow"
semicolon_if_nothing_returned = "deny"
trivially-copy-pass-by-ref = "deny"
default_trait_access = "deny"
match-wildcard-for-single-variants = "deny"
redundant-closure-for-method-calls = "deny"
filter_map_next = "deny"
manual_let_else = "deny"
unused_async = "deny"
from_over_into = "deny"
needless_borrow = "deny"
new_without_default = "deny"
useless_conversion = "deny"

[lints.rustdoc]
broken_intra_doc_links = "forbid"
