[package]
name = "gigacenter"
version = "0.1.1"
edition = "2021"

[dependencies]
anstyle = "1.0.10"
anyhow = "1.0.94"
async-trait = "0.1.83"
clap = { version = "4.5.23", features = ["derive"] }
enum_dispatch = "0.3.13"
env_logger = "0.11.6"
futures = "0.3.31"
libc = "0.2.167"
log = "0.4.22"
rkyv = { version = "0.8.9", features = ["bytecheck"] }
slint = { version = "1.9.2", optional = true, default-features = false, features = [
  "compat-1-2",
  "std",
  "log",
  "backend-winit",
  "renderer-femtovg",
  "renderer-software",
] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["codec"] }

[build-dependencies]
slint-build = { version = "1.9.1", optional = true }

[features]
default = ["self-packed", "gui"]
self-packed = []
gui = ["dep:slint", "dep:slint-build"]

[lints.rust]
rust_2018_idioms = { level = "forbid", priority = -1 }
missing_docs = "deny"
unused_results = "deny"

[lints.rustdoc]
broken_intra_doc_links = "forbid"

# performance doesn't matter, optimizations for size
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
